syntax = "proto3";

package user_proto;

option go_package = "geo.user_service.v1;userv1";
import "google/api/annotations.proto";


service UserService {
  rpc Profile (ProfileRequest) returns (User) {
    option(google.api.http) = {
      post : "/api/user_service/profile"
      body : "*"
    };
  }
  rpc List (EmptyRequest) returns (ListResponse) {
    option(google.api.http) = {
      get : "/api/user_service/list"
    };
  }
  rpc GetUser (ProfileRequest) returns (User);
  rpc SetUser (User) returns (EmptyRequest);

}



message ProfileRequest {
    string email = 1;
}
message User {
  string email = 1;
  string password = 2;
}

message EmptyRequest {

}
message ListResponse {
  repeated User user = 1;
}
